# qMonstatek

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: app_info.cmake  deploy_mac.cmake.in
installer/: qmonstatek.iss
src/: CMakeLists.txt  main.cpp
src/backend/device/: m1_device.cpp
src/backend/updater/: dfu_flasher.cpp  github_checker.cpp  swd_recovery.cpp  swd_recovery.h  tool_paths.cpp
src/qml/: main.qml
src/qml/components/: Sidebar.qml
src/qml/views/: AboutView.qml  DfuFlashView.qml
